--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
     "parcel": "^2.4.1"
-  }
+  },
+  "browserlist": ["Chrome>95", "Firefox>95"]
 }
